testsuite/tests/typing-layouts-products/implicit_unboxed_records_disabled.compilers.reference
File "implicit_unboxed_records.ml", line 58, characters 22-31:
58 | let print_ints prefix #{ x; y } = Printf.printf "%s: [%d %d]\n" prefix x y
                           ^^^^^^^^^
Error: This construct requires the stable version of the extension "layouts", which is disabled and cannot be used
